# tracerProj

./: .gitignore  README.md  tracerProj.cabal
.stack-work/install/x86_64-linux-ncurses6/lts-8.12/8.0.2/pkgdb/: package.cache
Programs/: FizzBuzz.txt  IF1.txt  IF2.txt  SimpleAssignment.txt  WhileStatement.txt
app/: Main.hs
src/: CFG.hs  CSP.hs  Eval.hs  Lang.hs  Lib.hs  Parser.hs  Trace.hs
