name:                tracerProj
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tracerProj#readme
license:             wtfpl
license-file:        LICENSE
author:              Jeffrey Young
maintainer:          youngjef@oregonstate.edu
copyright:           2017 Jeffrey Young
category:            Experimental
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lang
                     , Parser
                     , Trace
                       Eval

  build-depends:       base >= 4.7 && < 5,
                       containers >= 0.5.7.1,
                       directory >= 1.3,
                       list-extras >= 0.4.1.4,
                       megaparsec,
                       mtl,
                       text,
                       transformers >= 0.5.2.0

  default-language:    Haskell2010
  default-extensions:  FlexibleContexts,
                       FlexibleInstances,
                       TypeSynonymInstances,
                       OverloadedStrings,
                       DeriveFunctor,
                       DeriveFoldable,
                       DeriveTraversable,
                       MultiParamTypeClasses

executable tracerProj-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tracerProj
                     , megaparsec >= 5.2
                     , text
  default-language:    Haskell2010

test-suite tracerProj-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tracerProj
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tracerProj
